public/styles/now.css
@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,200&display=swap');

.yerrr-tab-nav {
  display: flex;
  justify-content: space-around;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  padding-top: 20px;
  padding-bottom: 8px;
  font-size: 18px;
  top: 40px;
  font-family: 'Source Sans Pro', sans-serif;
}

.yerrr-tab-link {
  color: white;
  text-decoration: none;
  font-weight: bold;
  padding: 10px;
  margin-right: 5%;
  margin-left: 10%;
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
    1px 1px 0 black;
}

.yerrr-tab-link:hover {
  color: rgb(73, 73, 226);
}

.yerrr-tab-link.active {
  color: rgb(75, 75, 239);
}

.user-post-list {
  border: 1px solid;
}

.user-post {
  border: 1px solid;
  font-family: 'Source Sans Pro', sans-serif;
}

.chat-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 50%;
  width: 100%;
  margin: 0 auto;
  font-family: 'Source Sans Pro', sans-serif;
}

.chat-window {
  flex-grow: 1;
  width: 80%;
  overflow-y: auto;
  border-radius: 10px;
  padding: 10px;
  margin-bottom: 20px;
  max-height: 60%;
}

@media (max-width: 480px) {
  .chat-window {
    height: 40vh;
  }
}
.message {
  margin: 15px 0;
  padding: 10px;
  border-radius: 18px;
  clear: both;
  line-height: 1.4;
  width: 80%;
  max-width: 500px;
}

.message-info {
  font-size: 0.8rem;
  margin-bottom: 5px;
}

.sender-name {
  color: white;
}

.message-time {
  color: #aaa;
  float: right;
}

.message.isSender {
  background-color: #0b93f6;
  color: white;
  float: right;
}

.message:not(.isSender) {
  background-color: #717882;
  color: black;
  float: left;
}

.message-form {
  width: 90%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid #ccc;
  padding: 10px;
}

.message-form input {
  flex-grow: 1;
  margin-right: 10px;
  padding: 10px;
  border-radius: 18px;
  border: none;
}

.message-form button {
  padding: 10px 20px;
  border: none;
  border-radius: 18px;
  background-color: rgb(142, 141, 141);
  color: white;
  cursor: pointer;
}

.message-form button:disabled {
  background-color: #ccc;
}

#nvm {
  background-color: rgb(132, 132, 132);
  color: white;
  border-radius: 5px;
  font-size: 1rem;
  cursor: pointer;
  transition: background-color 0.3s ease;
  margin-bottom: 5px;
}

#nvm:hover {
  background-color: #73b0d1;
}

.chat-modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 70%;
  max-width: 500px;
  min-height: 150px;

  padding: 20px;
  color: #2b3434;
  border: 3px solid #2b3434;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  background-color: #b3cbc7be;
}

.chat-modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #e5f0ecd6;
}

/* form */
.yerrrForm {
  background-color: #717882;
  padding: 30px;
  max-width: 600px;
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
  font-family: 'Source Sans Pro', sans-serif;
}

.yerrrForm form {
  display: flex;
  flex-direction: column;
}

.yerrrForm label {
  margin-bottom: 5px;
  color: white;
}

.yerrrForm input,
.yerrrForm select,
.yerrrForm button {
  padding: 10px;
  margin-bottom: 20px;
  border: none;
  border-radius: 5px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
}

.yerrrForm input {
  height: 40px;
  outline: none;
  margin-left: 5px;
}

.yerrrForm select {
  margin-left: 20px;
}

.yerrrForm button {
  background-color: rgb(146, 145, 145);
  color: white;
  cursor: pointer;
  transition: background-color 0.3s;
}

.yerrrForm button:hover {
  background-color: #6d498b;
}

.yerrrForm input::placeholder {
  color: white;
  opacity: 1;
}

#words {
  margin-top: 40px;
  text-align: center;
}

/* Media Queries */

@media (max-width: 480px) {
  .yerrrForm {
    padding-left: 10vh;
    padding-right: 10vh;
  }

  .yerrrForm input,
  .yerrrForm select,
  .yerrrForm button {
    width: 100%;
  }

  .yerrrForm button {
    margin-left: 10px;
  }
}

/* now */
.user-post {
  border: none;
  background-color: #717882;
  color: white;
  padding: 5px;
  margin-bottom: 30px;
  text-align: center;
  max-width: 300px;
  min-height: 25vh;
  width: 70vw;
  display: flex;
  flex-direction: column;
  font-family: 'Source Sans Pro', sans-serif;
  position: relative;
}

.pagination {
  align-self: center;
  justify-self: center;
}

.name-image-post {
  display: flex;
}

.yerr-buttons {
  display: flex;
  justify-content: space-evenly;
}

.preference-container {
  position: absolute;
  top: 0;
  right: 10px;
}

.user-post-list {
  border: none;
  height: 75vh;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.user-post-list > div {
  margin-bottom: 10px;
  /* max-width: 500px; */
}

.preference {
  font-size: 20pt;
}
#name-post {
  font-size: 16pt;
  font-weight: bold;
}
.filter {
  margin-top: 5vh;
  text-align: center;
}

.filter select {
  background-color: #fff;
  color: #000;
  border: none;
  border-radius: 5px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
}

.pagination {
  display: flex;
  justify-content: space-between; /* Add this property */
  align-items: center; /* Add this property */
  margin-bottom: 20px;
}

.user-post-list .user-post button {
  padding: 0;
  border: none;
  background-color: transparent;
  font-size: 20px;
  cursor: pointer;
  margin-right: 2vh;
  margin-left: 2vh;
  align-items: center;
}

.user-post-list .user-post button:hover {
  color: #999;
}

#edit {
  font-size: 15px;
}

/* Media queries */
@media (max-width: 768px) {
  .user-post-list .user-post button {
    margin-right: 10px;
    margin-left: 10px;
  }
}

@media (max-width: 480px) {
  .user-post-list .user-post button {
    margin-right: 5px;
    margin-left: 5px;
  }
}

.instructions-container button {
  background-color: #9c94b1;
  color: white;
  border: none;
  padding: 10px 20px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.instructions-container button:hover {
  background-color: #7b748f;
}

